errors.txt
src/7.1/cc/cc.c: In function ‘parse_command’:
src/7.1/cc/cc.c:6454:49: error: ‘EX_OK’ undeclared (first use in this function); did you mean ‘X_OK’?
 6454 |                                 if (access(cfe, EX_OK) == -1) {
      |                                                 ^~~~~
      |                                                 X_OK
src/7.1/cc/cc.c:6454:49: note: each undeclared identifier is reported only once for each function it appears in
src/7.1/cc/cc.c: In function ‘mktempstr’:
src/7.1/cc/cc.c:9647:25: error: ‘EX_OK’ undeclared (first use in this function); did you mean ‘X_OK’?
 9647 |         (access(filter, EX_OK) == 0)) {
      |                         ^~~~~
      |                         X_OK
src/7.1/cc/cc.c: In function ‘run’:
src/7.1/cc/cc.c:9663:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9663 |     SIG_PF sp88;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9664:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9664 |     SIG_PF sp84;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9669:5: error: unknown type name ‘sysset_t’; did you mean ‘sigset_t’?
 9669 |     sysset_t sp34;
      |     ^~~~~~~~
      |     sigset_t
src/7.1/cc/cc.c:9784:21: error: request for member ‘word’ in something not a structure or union
 9784 |                 sp34.word[var_s0] = 0;
      |                     ^
src/7.1/cc/cc.c: In function ‘edit_src’:
src/7.1/cc/cc.c:9859:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9859 |     SIG_PF sp48;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c:9860:5: error: unknown type name ‘SIG_PF’; did you mean ‘SIGFPE’?
 9860 |     SIG_PF sp44;
      |     ^~~~~~
      |     SIGFPE
src/7.1/cc/cc.c: In function ‘record_static_fileset’:
src/7.1/cc/cc.c:10564:23: error: ‘FILE’ has no member named ‘_file’; did you mean ‘_fileno’?
10564 |     ftruncate(sp28DC->_file, 0);
      |                       ^~~~~
      |                       _fileno
src/7.1/cc/cc.c: In function ‘func_00432940’:
src/7.1/cc/cc.c:10880:5: error: unknown type name ‘sysset_t’; did you mean ‘sigset_t’?
10880 |     sysset_t syscalls; // sp24
      |     ^~~~~~~~
      |     sigset_t
